--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,10 @@
 <ion-header>
   <ion-navbar>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="onLoadNewPlace()">
+          <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-buttons>
     <ion-title>
       Ionic Blank
     </ion-title>
@@ -7,5 +12,4 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button (click)="onLoadNewPlace()">New Place</button>
 </ion-content>
