--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,4 +12,7 @@
 </ion-header>
 
 <ion-content padding>
+  <ul>
+    <li *ngFor="let place of places">{{ place.title }}</li>
+  </ul>
 </ion-content>
