--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
         </button>
     </ion-buttons>
     <ion-title>
-      Ionic Blank
+      My Top Places
     </ion-title>
   </ion-navbar>
 </ion-header>
