--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 
 <ion-content padding>
     <ion-list>
-      <ion-item *ngFor="let place of places">
+      <ion-item *ngFor="let place of places" (click)="onOpenPlace(place)">
         {{ place.title }}
       </ion-item>
     </ion-list>
