--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,8 +13,11 @@
 
 <ion-content padding>
     <ion-list>
-      <ion-item *ngFor="let place of places" (click)="onOpenPlace(place)">
-        {{ place.title }}
+      <ion-item *ngFor="let place of places">
+        <p (click)="onOpenPlace(place)">{{ place.title }}</p>
+        <button ion-button clear item-end icon-only (click)="onDeletePlace(place)">
+            <ion-icon name="md-trash"></ion-icon>
+        </button>
       </ion-item>
     </ion-list>
 </ion-content>
